// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _accessKey="V" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input accesskey="V" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _alert=true 1`] = `
<kol-input-file _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _disabled=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="disabled file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" disabled="" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _hint="Hint" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input" style="position: relative;">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left icon-right input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-left input" style="position: relative;">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label="" _tabindex="-1"></kol-icon>
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="icon-right input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
        <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label="" _tabindex="-1"></kol-icon>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-file _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file hidden-error kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _readOnly=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _shortKey="S" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
        <kol-button-wc _hidelabel="" _label="einblenden" _tabindex="-1" tabindex="0"></kol-button-wc>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _touched=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-input kol-input-file msg-type-error" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input" style="position: relative;">
        <input autocapitalize="off" autocorrect="off" id="id-nonce" name="field" type="file" value="File">
      </div>
    </div>
  </template>
</kol-input-file>
`;
